Implement StringTemplate.Processor for creating Cfgs from BNF strings.
Signed-off-by: Franz Wilhelmstötter <franz.wilhelmstoetter@gmail.com>