@@ -52,6 +52,18 @@ allprojects {
 		mavenCentral()
 	}
 
+	tasks.withType<JavaCompile>().configureEach {
+		options.compilerArgs.add("--enable-preview")
+	}
+
+	tasks.withType<Test>().configureEach {
+		jvmArgs("--enable-preview")
+	}
+
+	tasks.withType<JavaExec>().configureEach {
+		jvmArgs("--enable-preview")
+	}
+
 	configurations.all {
 		resolutionStrategy.preferProjectModules()
 	}
@@ -71,6 +83,7 @@ gradle.projectsEvaluated {
 		}
 
 		plugins.withType<JavaPlugin> {
+
 			configure<JavaPluginExtension> {
 				modularity.inferModulePath.set(true)
 
